--- a/06-resources.yaml
+++ b/06-resources.yaml
@@ -16,4 +16,4 @@ spec:
         limits:
           cpu: 120m
           memory: 120Mi
-      
+      args: ["--vm", "1", "--vm-bytes", "250M", "--vm-hang", "1"]
