--- a/08-cm-util.yaml
+++ b/08-cm-util.yaml
@@ -9,14 +9,17 @@ spec:
   containers:
     - name: nginx
       image: nginx
-      env:
-        - name: course
-          valueFrom:
-            configMapKeyRef:
-              key: course
-              name: cm
-        - name: duration
-          valueFrom:
-            configMapKeyRef:
-              key: duration
-              name: cm
+      envFrom:
+        - configMapRef:
+            name: cm
+      # env:
+      #   - name: course
+      #     valueFrom:
+      #       configMapKeyRef:
+      #         key: course
+      #         name: cm
+      #   - name: duration
+      #     valueFrom:
+      #       configMapKeyRef:
+      #         key: duration
+      #         name: cm
