--- a/14-replicaset.yaml
+++ b/14-replicaset.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
         - name: nginx-rs
-          image: nginx
+          image: nginx:alpine-slim
 ---
 apiVersion: v1
 kind: Service
