--- a/15-deployment.yaml
+++ b/15-deployment.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
         - name: nginx-dplymnt
-          image: nginx:alpine-slim
+          image: nginx:alpine
 ---
 apiVersion: v1
 kind: Service
